added about page

--- a/src/Components/Button/button.css
+++ b/src/Components/Button/button.css
@@ -1,8 +1,8 @@
 .button_wrapper {
   width: 100vw;
-  margin-top: 24px;
   display: flex;
   justify-content: center;
+  padding: 24px;
 }
 
 .button {
@@ -23,4 +23,10 @@
 
 .button:hover {
   cursor: pointer;
+}
+
+@media (min-width : 769px){
+ .button{
+   width: 32%;
+ } 
 }
