--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,8 @@
   font-size: 40px;
   font-weight: bolder;
   line-height: 48px;
-  padding-bottom: 16px;
+  padding: 24px 24px;
+  color: #004869;
 }
 
 .large_body {
@@ -33,4 +34,14 @@
   font-size: 14px;
   line-height: 48px;
   line-height: 2em;
+  padding: 0px 24px;
+}
+
+@media (min-width: 769px) {
+  .title {
+    text-align: center;
+  }
+  .body {
+    text-align: center;
+  }
 }
