--- a/src/Components/Toolbar/toolbar.css
+++ b/src/Components/Toolbar/toolbar.css
@@ -24,31 +24,44 @@
 
 .toolbar {
   height: 100%;
+  width: 64%;
   background: white;
   box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.5);
   position: fixed;
   top: 0;
-  left: 0;
-  width: 70%;
+  right: 0;
   max-width: 300px;
   z-index: 200;
+  transform: translateX(110%);
+  transition: transform 0.2s ease-out;
+  text-align: center;
+}
+
+.toolbar.open {
+  transform: translateX(0);
 }
 
 .toolbar ul {
-    height: 100%;
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  height: 100%;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
 }
 
 .toolbar li {
-    text-decoration: none;
-    font-size: 1.2rem;
-    margin: .5rem;
+  text-decoration: none;
+  font-size: 1.2rem;
+  margin: 0.5rem;
 }
 
-.toolbar li:hover, 
+.toolbar li:hover,
 .toolbar li:active {
-    color :#DF3063;
+  color: #df3063;
+}
+
+@media (min-width: 769px) {
+  .ham {
+    display: none;
+  }
 }
