--- a/src/App.css
+++ b/src/App.css
@@ -16,18 +16,17 @@
 }
 
 .title {
-  font-size: 40px;
+  font-size: 36px;
   font-weight: bolder;
   line-height: 48px;
-  padding: 24px 24px;
+  padding: 24px 0px;
   color: #004869;
 }
 
 .large_body {
-  font-size: 14px;
-  font-weight: bold;
-  line-height: 48px;
-  line-height: 48px;
+  font-size: 16px;
+  line-height: 40px;
+  text-align: center;
 }
 
 .body {
@@ -39,9 +38,11 @@
 
 @media (min-width: 769px) {
   .title {
-    text-align: center;
+    font-size: 64px;
   }
-  .body {
-    text-align: center;
+
+  .large_body {
+    font-size: 20px;
+    text-align: left;
   }
 }
