--- a/src/App.css
+++ b/src/App.css
@@ -4,20 +4,20 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-family: Roboto;
+  font-family: 'Roboto', sans-serif;
   color: #414042;
 }
 
 .title {
   font-size: 36px;
-  font-weight: bolder;
+  font-weight: 900;
   line-height: 48px;
   padding: 24px 0px;
   color: #004869;
 }
 
 .large_body {
-  font-size: 16px;
+  font-size: 20px;
   line-height: 40px;
   text-align: center;
 }
