--- a/src/Components/Button/button.css
+++ b/src/Components/Button/button.css
@@ -1,12 +1,15 @@
 .button_wrapper {
-  width: 100vw;
+  width: 64vw;
   display: flex;
   justify-content: center;
-  padding: 24px;
+  padding: 32px 0px;
 }
 
 .button {
-  width: 75vw;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 8vh;
   background: #df3063;
   font-size: 20px;
