--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,6 +1,21 @@
-.home_wrapper{
-    width: 80vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.home_wrapper {
+  width: 64vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.large-body {
+  text-align: center;
+}
+
+.bannerDiv {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logowhite {
+  width: 36vw;
+  position: absolute;
 }
