fixed the nav links in the toolbar

--- a/src/Components/Toolbar/toolbar.css
+++ b/src/Components/Toolbar/toolbar.css
@@ -59,6 +59,10 @@
 .toolbar li:active {
   color: #df3063;
 }
+.toolbar_item{
+  color: #004869;
+  text-decoration: none;
+}
 
 @media (min-width: 769px) {
   .ham {
