--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@
 }
 
 .banner{
-  width: 64vw;
+  width: 100vw;
   height: 36vh;
   overflow: hidden;
 }
@@ -54,9 +54,11 @@
     font-size: 64px;
 
   }
-
   .large_body {
     font-size: 20px;
     text-align: left;
+  }
+  .banner{
+    width: 64vw;
   }
 }
