--- a/src/Components/Button/button.css
+++ b/src/Components/Button/button.css
@@ -1,5 +1,5 @@
 .button_wrapper {
-  width: 64vw;
+  width: 80vw;
   display: flex;
   justify-content: center;
   padding: 32px 0px;
@@ -11,6 +11,7 @@
   justify-content: center;
   align-items: center;
   height: 8vh;
+  width: 100%;
   background: #df3063;
   font-size: 20px;
   font-weight: bold;
