--- a/src/Components/CallCTA/Call.css
+++ b/src/Components/CallCTA/Call.css
@@ -1,5 +1,5 @@
 .call_wrapper{
-    width: 64vw;
+    width: 100vw;
     background-color: rgb(239, 240, 241);
     padding: 24px 0px;
     display: flex;
@@ -27,7 +27,7 @@
   
 }
 .number{
-    font-size: 32px;
+    font-size: 2rem;
     font-weight: 900;
     line-height: 48px;
     color: #004869;
@@ -36,6 +36,14 @@
 
 
 @media (min-width : 769px){
+    .call_wrapper{
+        width: 64vw;
+        background-color: rgb(239, 240, 241);
+        padding: 24px 0px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
     .logo{
         width: 16vw;
         padding: 36px 0px;
