--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,5 +1,5 @@
 .home_wrapper {
-  width: 64vw;
+  width: 80vw;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -16,6 +16,30 @@
 }
 
 .logowhite {
-  width: 36vw;
+  width: 80vw;
   position: absolute;
+}
+
+
+@media (min-width: 769px) {
+  .home_wrapper {
+    width: 64vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .large-body {
+    text-align: center;
+  }
+  
+  .bannerDiv {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .logowhite {
+    width: 36vw;
+    position: absolute;
+  }
 }
