--- a/src/Components/CallCTA/Call.css
+++ b/src/Components/CallCTA/Call.css
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-bottom: 64px;
 }
 
 .logo{
@@ -20,17 +21,21 @@
     color: #414042;
 }
 .call_box{
-    box-sizing: border-box;
+    width: 80vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border: 2px solid #004869;
     border-radius: 2px;
-    padding: 0px 24px;
-  
+    padding: 8px 0px;
 }
 .number{
-    font-size: 2rem;
-    font-weight: 900;
+    font-size: 20px;
     line-height: 48px;
     color: #004869;
+    font-size: 20px;
+    font-weight: bold;
+    letter-spacing: 4px;
 }
 
 
@@ -53,6 +58,7 @@
     }
     .call_box{
         margin-bottom: 64px;
+        width: 24vw;
     }
-  
+ 
    }
