--- a/src/Components/Toolbar/toolbar.css
+++ b/src/Components/Toolbar/toolbar.css
@@ -47,17 +47,21 @@
   display: flex;
   flex-direction: column;
   /* justify-content: center; */
+  padding-top: 40px;
 }
 
 .toolbar li {
   text-decoration: none;
   font-size: 1.2rem;
   margin: 0.5rem;
+  padding:16px;
+  border: 1px solid #00486931;
 }
 
 .toolbar li:hover,
 .toolbar li:active {
   color: #df3063;
+  background-color: #00486910;
 }
 .toolbar_item{
   color: #004869;
