--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,8 +1,55 @@
 .footer_wrapper {
-  /* position: absolute; */
   bottom: 0px;
-  width: 100vw;
-  height: 20vh;
+  width: 100%;
   background-color: #004869;
   color: white;
+  padding: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 12px;
+}
+
+.footer_container {
+  width: 80vw;
+}
+
+.footer_container li {
+  padding: 24px 0px;
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.foot_container li:hover,
+.foot_container li:active {
+  color: #df3063;
+  font-weight: bold;
+}
+.row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.column {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.footer_logo {
+  width: 150px;
+  padding:24px 0px;
+}
+
+.social_media_wrapper {
+}
+.social_media_icon {
+}
+
+@media (min-width: 769px) {
+.footer_logo {
+  width: 200px;
+  padding:36px 0px;
+}
 }
