--- a/src/Components/CallCTA/Call.css
+++ b/src/Components/CallCTA/Call.css
@@ -6,6 +6,7 @@
     flex-direction: column;
     align-items: center;
     padding-bottom: 64px;
+    margin-bottom: 36px;
 }
 
 .logo{
@@ -48,6 +49,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin-bottom: 64px;
     }
     .logo{
         width: 16vw;
