--- a/src/Components/CallCTA/Call.css
+++ b/src/Components/CallCTA/Call.css
@@ -1,66 +1,64 @@
-.call_wrapper{
-    width: 100vw;
+.call_wrapper {
+  width: 100vw;
+  background-color: rgb(239, 240, 241);
+  padding: 24px 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 64px;
+  margin-bottom: 36px;
+  box-shadow: 0 0 5px 0 #ccc;
+}
+
+.logo {
+  width: 64vw;
+}
+
+.call {
+  text-align: center;
+  font-size: 28px;
+  font-weight: 900;
+  line-height: 32px;
+  padding: 24px;
+  color: #414042;
+}
+.call_box {
+  width: 80vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #004869;
+  border-radius: 2px;
+  padding: 8px 0px;
+}
+.number {
+  font-size: 20px;
+  line-height: 48px;
+  color: #004869;
+  font-size: 20px;
+  font-weight: bold;
+  letter-spacing: 4px;
+}
+
+@media (min-width: 769px) {
+  .call_wrapper {
+    width: 64vw;
     background-color: rgb(239, 240, 241);
     padding: 24px 0px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 64px;
+  }
+  .logo {
+    width: 16vw;
+    padding: 36px 0px;
+  }
+  .call {
     padding-bottom: 64px;
-    margin-bottom: 36px;
+  }
+  .call_box {
+    margin-bottom: 64px;
+    width: 24vw;
+  }
 }
-
-.logo{
-    width: 64vw;
-}
-
-.call{
-    text-align: center;
-    font-size: 28px;
-    font-weight: 900;
-    line-height: 32px;
-    padding: 24px;
-    color: #414042;
-}
-.call_box{
-    width: 80vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 2px solid #004869;
-    border-radius: 2px;
-    padding: 8px 0px;
-}
-.number{
-    font-size: 20px;
-    line-height: 48px;
-    color: #004869;
-    font-size: 20px;
-    font-weight: bold;
-    letter-spacing: 4px;
-}
-
-
-
-@media (min-width : 769px){
-    .call_wrapper{
-        width: 64vw;
-        background-color: rgb(239, 240, 241);
-        padding: 24px 0px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin-bottom: 64px;
-    }
-    .logo{
-        width: 16vw;
-        padding: 36px 0px;
-    }
-    .call{
-        padding-bottom: 64px;
-    }
-    .call_box{
-        margin-bottom: 64px;
-        width: 24vw;
-    }
- 
-   }
