consolidated the css into just home, fixed design bug

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,12 @@
   font-family: "Roboto", sans-serif;
   color: #414042;
 }
-
+.text_container{
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .title {
   font-size: 36px;
   font-weight: 900;
@@ -51,6 +56,11 @@
 
 @media (min-width: 769px) {
   .title {
+    width: 100%;
+    font-size: 36px;
+    text-align: left;
+  }
+  .large_body{
     font-size: 20px;
   }
   .banner {
