--- a/src/Components/CallCTA/Call.css
+++ b/src/Components/CallCTA/Call.css
@@ -1,5 +1,4 @@
 .call_wrapper {
-  width: 100vw;
   background-color: rgb(239, 240, 241);
   padding: 24px 0px;
   display: flex;
@@ -9,27 +8,32 @@
   margin-bottom: 36px;
   box-shadow: 0 0 5px 0 #ccc;
 }
+.call_contianer {
+  padding: 24px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 .logo {
-  width: 64vw;
+  width: 48vw;
 }
 
 .call {
   text-align: center;
-  font-size: 28px;
+  font-size: 24px;
   font-weight: 900;
-  line-height: 32px;
+  line-height: 1.75;
   padding: 24px;
   color: #414042;
 }
 .call_box {
-  width: 80vw;
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
   border: 2px solid #004869;
   border-radius: 2px;
-  padding: 8px 0px;
 }
 .number {
   font-size: 20px;
@@ -38,11 +42,11 @@
   font-size: 20px;
   font-weight: bold;
   letter-spacing: 4px;
+  padding: 0px 32px;
 }
 
 @media (min-width: 769px) {
   .call_wrapper {
-    width: 64vw;
     background-color: rgb(239, 240, 241);
     padding: 24px 0px;
     display: flex;
@@ -50,15 +54,19 @@
     align-items: center;
     margin-bottom: 64px;
   }
+
   .logo {
     width: 16vw;
-    padding: 36px 0px;
   }
   .call {
-    padding-bottom: 64px;
+    width: 80%;
+    font-size: 24px;
   }
   .call_box {
-    margin-bottom: 64px;
-    width: 24vw;
+    margin-bottom: 4%;
+  }
+  .number {
+    padding: 0px 40px;
+    font-size: 20px;
   }
 }
