--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,5 +1,5 @@
 .home_wrapper {
-  width: 80vw;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -20,7 +20,6 @@
   position: absolute;
 }
 
-
 @media (min-width: 769px) {
   .home_wrapper {
     width: 64vw;
@@ -31,15 +30,20 @@
   .large-body {
     text-align: center;
   }
-  
+
   .bannerDiv {
     display: flex;
     justify-content: center;
     align-items: center;
   }
-  
+
   .logowhite {
     width: 36vw;
     position: absolute;
+  }
+}
+@media (max-width: 768px) {
+  .cfd_banner {
+    display: none;
   }
 }
