--- a/src/Components/Toolbar/toolbar.css
+++ b/src/Components/Toolbar/toolbar.css
@@ -37,6 +37,13 @@
   text-align: center;
 }
 
+.toolbar_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
 .toolbar.open {
   transform: translateX(0);
 }
@@ -54,7 +61,7 @@
   text-decoration: none;
   font-size: 1.2rem;
   margin: 0.5rem;
-  padding:16px;
+  padding: 16px;
   border: 1px solid #00486931;
 }
 
@@ -63,11 +70,21 @@
   color: #df3063;
   background-color: #00486910;
 }
-.toolbar_item{
+.toolbar_item {
   color: #004869;
   text-decoration: none;
 }
 
+.call_toolbar {
+display: flex;
+justify-content: space-around;
+align-items: center;
+padding: 0px 20px;
+margin-bottom: 52px;
+}
+.phone_icon {
+width: 8%;
+}
 @media (min-width: 769px) {
   .ham {
     display: none;
