--- a/src/Components/Toolbar/toolbar.css
+++ b/src/Components/Toolbar/toolbar.css
@@ -76,14 +76,14 @@
 }
 
 .call_toolbar {
-display: flex;
-justify-content: space-around;
-align-items: center;
-padding: 0px 8px;
-margin-bottom: 52px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 0px 8px;
+  margin-bottom: 52px;
 }
 .phone_icon {
-width: 8%;
+  width: 8%;
 }
 @media (min-width: 769px) {
   .ham {
