--- a/src/Components/Button/button.css
+++ b/src/Components/Button/button.css
@@ -1,8 +1,7 @@
 .button_wrapper {
-  width: 80vw;
+  /* width: 80vw;
   display: flex;
-  justify-content: center;
-  padding: 32px 0px;
+  justify-content: center; */
 }
 
 .button {
@@ -10,15 +9,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 8vh;
-  width: 100%;
   background: #df3063;
   font-size: 20px;
   font-weight: bold;
   letter-spacing: 4px;
   color: white;
-  border: none;
   border-radius: 2px;
+  text-transform: uppercase;
+  padding: 20px 56px;
+  transition: 0.2s all ease;
 }
 
 .button:active {
@@ -28,10 +27,60 @@
 
 .button:hover {
   cursor: pointer;
+  transform: scale(1.01);
 }
+
+/* _________________________________ */
+.button1 {
+  position: relative;
+  display: block;
+  padding: 16px 56px;
+  font-size: 20px;
+  font-weight: bold;
+  letter-spacing: 4px;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #004869;
+  border: none;
+  border: 2px solid #be234f;
+  overflow: hidden;
+  transition: 0.5s all ease;
+}
+
+.button1::before {
+  background: #be234f;
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+  transition: all 0.4s ease;
+}
+
+.btn1::before {
+  width: 100%;
+  height: 0;
+  transform: translate(-50%, -50%) rotate(45deg);
+}
+.btn1:hover::before {
+  height: 680%;
+}
+
+.button1:hover {
+  color: #ffff;
+}
+
+/* .button:active {
+  background: #be234f;
+  box-shadow: 0 0 5px 0 #ccc;
+}
+
+.button:hover {
+  cursor: pointer;
+} */
 
 @media (min-width: 769px) {
   .button {
-    width: 32%;
   }
 }
