--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -79,18 +79,28 @@
   width: 20px;
   padding: 0px 8px;
 }
+.social_media_icon:hover {
+  cursor: pointer;
+  transform: scale(1.02);
+}
+.footer_logo:hover {
+  cursor: pointer;
+  transform: scale(1.01);
+}
 
 @media (min-width: 769px) {
   .footer_wrapper {
     width: 100%;
   }
   .footer_container {
+    width: 60%;
     font-size: 16px;
+    justify-content: space-between;
   }
-  .footer_links{
-    justify-content: space-around;
-  }
-  .social_media_wrapper {
+
+  .footer_phone {
+    height: 24px;
+    padding: 0px 16px;
   }
   .footer_logo {
     width: 200px;
