--- a/src/Components/CallCTA/Call.css
+++ b/src/Components/CallCTA/Call.css
@@ -4,7 +4,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-bottom: 64px;
   box-shadow: 0 0 5px 0 #ccc;
 }
 .call_contianer {
@@ -59,11 +58,13 @@
 @media (min-width: 769px) {
   .call_wrapper {
     background-color: rgb(239, 240, 241);
-    padding: 24px 0px;
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-bottom: 64px;
+  }
+  .call_contianer {
+    padding: 24px 100px;
   }
 
   .logo {
