--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -88,6 +88,11 @@
   transform: scale(1.01);
 }
 
+.top_container{
+  display: flex;
+  justify-content: center;
+}
+
 @media (min-width: 769px) {
   .footer_wrapper {
     overflow: hidden;
