--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -2,10 +2,12 @@
   bottom: 0px;
   width: 100vw;
   background-color: #004869;
+  background-image: linear-gradient(90deg, #004869, #216181);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  box-shadow: 0 0 8px 0 rgba(37, 37, 37, 0.589);
 }
 
 .footer_container {
