--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -1,5 +1,6 @@
 .nav_wrapper {
   background-color: #004869;
+  background-image: linear-gradient(90deg, #004869, #216181);
   width: 100vw;
   height: 8vh;
   display: flex;
