added banner images to vision/dental and changed the main banner

--- a/src/Components/Banner/Banner.css
+++ b/src/Components/Banner/Banner.css
@@ -16,6 +16,14 @@
 .medical{
   background-image: url("../../assets/medical.png");
 }
+.dentalPic{
+  background-image: url("../../assets/dental_woman_laugh.jpg");
+  background-position: left;
+}
+.visionKid{
+  background-image: url("../../assets/kid_Vision.jpg");
+  background-position: right;
+}
 
 .bannerTitle {
   font-size: 36px;
