--- a/src/Components/CallCTA/Call.css
+++ b/src/Components/CallCTA/Call.css
@@ -17,6 +17,13 @@
   width: 48vw;
 }
 
+.prompt{
+  text-align: center;
+  font-size: 24px;
+  line-height: 1.75;
+  padding: 24px;
+  color: #414042;
+}
 .call {
   text-align: center;
   font-size: 24px;
@@ -70,7 +77,7 @@
   }
 
   .logo {
-    width: 16vw;
+    width: 12vw;
   }
   .call {
     width: 80%;
