added the home banner, fixed the home button, and fixed call CTA spacing bug

--- a/src/Components/Banner/Banner.css
+++ b/src/Components/Banner/Banner.css
@@ -24,6 +24,9 @@
   background-image: url("../../assets/kid_Vision.jpg");
   background-position: right;
 }
+.dental_kid{
+  background-image: url("../../assets/dental_kid.png");
+}
 
 .bannerTitle {
   font-size: 36px;
