--- a/src/Components/Button/button.css
+++ b/src/Components/Button/button.css
@@ -21,6 +21,7 @@
   transition: 0.2s all ease;
 }
 
+
 .button:active {
   background: #be234f;
   box-shadow: 0 0 5px 0 #ccc;
@@ -99,5 +100,8 @@
   .button{
     font-size: 20px;
     padding: 20px 56px;
+  }
+  .dental_button{
+    margin-top: 280px;
   }
 }
