--- a/src/App.css
+++ b/src/App.css
@@ -72,7 +72,7 @@
 }
 
 .title {
-  animation: title 1s ease-out 0s 1;
+  animation: title 1000ms ease-out 0s 1;
 }
 
 .top_button {
@@ -91,7 +91,7 @@
 
 @keyframes title {
   0% {
-    transform: translateX(-4%);
+    transform: translateX(-2%);
     opacity: 0;
   }
   100% {
