--- a/src/Components/Banner/Banner.css
+++ b/src/Components/Banner/Banner.css
@@ -11,21 +11,21 @@
 }
 
 .pic1 {
-  background-image: url("../../assets/pp1.jpg");
+  background-image: url("https://drive.google.com/uc?export=view&id=1o8NFuYk9vxxEQTu2uNUq8hiAtGQe_n1v");
 }
 .medical {
   background-image: url("../../assets/medical.png");
 }
 .dentalPic {
-  background-image: url("../../assets/dental_woman_laugh.jpg");
+  background-image: url("https://drive.google.com/uc?export=view&id=1VhsrOXY1c33gu8V9HCtLKCZ9pqJRJV5q");
   background-position: left;
 }
 .visionKid {
-  background-image: url("../../assets/kid_Vision.jpg");
+  background-image: url("https://drive.google.com/uc?export=view&id=1EIJVzP6H8WYJg1qsg3bwPRaR1gWxyIOM");
   background-position: right;
 }
 .dental_kid {
-  background-image: url("../../assets/dental_kid.png");
+  background-image: url("https://drive.google.com/uc?export=view&id=1-Czwm86FRV00m7PbPlJ-RL6JOjg4EEI-");
 }
 
 .bannerTitle {
