--- a/src/Components/Button/button.css
+++ b/src/Components/Button/button.css
@@ -1,9 +1,6 @@
-.button_wrapper {
-  /* width: 80vw;
-  display: flex;
-  justify-content: center; */
-  /* display: flex; */
-}
+/* .button_wrapper {
+
+} */
 
 .button {
   text-decoration: none;
@@ -15,7 +12,8 @@
   font-weight: bold;
   letter-spacing: 4px;
   color: white;
-  border-radius: 2px;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px #00000050;
   text-transform: uppercase;
   padding: 20px;
   transition: 0.2s all ease;
@@ -29,10 +27,9 @@
 .button:hover {
   cursor: pointer;
   transform: scale(1.004);
-  background: #a71f45;
+  background: #be234f;
 }
 
-/* _________________________________ */
 .button1 {
   position: relative;
   display: block;
@@ -72,15 +69,6 @@
 .button1:hover {
   color: #ffff;
 }
-
-/* .button:active {
-  background: #be234f;
-  box-shadow: 0 0 5px 0 #ccc;
-}
-
-.button:hover {
-  cursor: pointer;
-} */
 
 .anim_button {
   animation: anim_button 1s ease-out 0s 1;
