--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -1,16 +1,12 @@
 .mobile_banner {
-  width: 100vw;
-  height: 100%;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 100px 0;
-  background: rgb(0, 72, 105);
-  background: linear-gradient(
-    90deg,
-    rgba(0, 72, 105, 1) 0%,
-    rgba(51, 153, 204, 1) 100%
-  );
+}
+.videoWrapper{
+  width: 100vw;
+  overflow: hidden;
+}
+.videoWrapper video {
+  width: 100vw;
 }
 
 .logo_white {
