--- a/src/Components/Product/Product.css
+++ b/src/Components/Product/Product.css
@@ -1,5 +1,49 @@
-.product_wrapper {
-  width: 300px;
-  height: 300px;
-  background-color: #0a9ad7;
+.card {
+  width: 20rem;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  border-radius: 4px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.418);
+
+}
+.card img {
+  width: 100%;
+  justify-content: flex-start;
+}
+
+.container {
+  text-align: center;
+}
+.container h1 {
+  padding: 12px;
+  font-weight: 700;
+  letter-spacing: 1px;
+}
+.container p {
+  color: #939598;
+  padding-bottom: 36px;
+}
+
+@media (min-width: 769px) {
+  .card {
+    width: 12rem;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    border-radius: 4px;
+    margin: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .card:hover {
+  }
+
 }
