--- a/src/Components/Product/Product.css
+++ b/src/Components/Product/Product.css
@@ -1,11 +1,14 @@
 .card {
-  width: 20rem;
+  width: 200px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
   border-radius: 4px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
+  transition: 0.3s;
+  margin: 20px;
+  background-color: #FFF;
 }
 
 .card:hover {
@@ -15,6 +18,7 @@
 .card img {
   width: 100%;
   justify-content: flex-start;
+  border-radius: 4px 4px 0 0;
 }
 
 .container {
@@ -30,20 +34,16 @@
   padding-bottom: 36px;
 }
 
-@media (min-width: 769px) {
-  .card {
-    width: 12rem;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    transition: 0.3s;
-    border-radius: 4px;
-    margin: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
+.card:hover {
+  cursor: pointer;
+}
+.container p:hover {
+  color: #414042;
+}
 
-  .card:hover {
-  }
+.container p:active {
+  color: #e03063;
+}
+@media (min-width: 769px) {
 
 }
