--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -8,21 +8,21 @@
   width: 100vw;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
+
 .full_title {
   font-size: 36px;
   font-weight: 900;
   text-align: left;
   line-height: 48px;
-  margin: 36px 36px 0px 36px;
+  padding: 36px;
   color: #004869;
-  text-align: left;
 }
 .full_body {
   font-size: 20px;
-  text-indent: 52px;
   line-height: 40px;
-  margin: 0px 36px;
+  padding: 0px 36px;
 }
 
 .products_container {
@@ -49,6 +49,36 @@
   align-items: center;
 }
 
+.layout {
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.layout_text {
+  width: 100vw;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  background-color: #004869;
+}
+.layout_text h1{
+
+}
+.layout_text p{
+
+}
+.layout_img {
+  width: 100vw;
+  height: 300px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #3399cc;
+}
 @media (min-width: 769px) {
   .home_wrapper {
     width: 100vw;
@@ -61,5 +91,14 @@
   }
   .pic {
     height: 500px;
+  }
+  .layout {
+    flex-direction: row;
+  }
+  .layout_text {
+    width: 50vw;
+  }
+  .layout_img {
+    width: 50vw;
   }
 }
