--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -58,27 +58,40 @@
 
 .layout_text {
   width: 100vw;
-  height: 300px;
+  height: 40vh;
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
   background-color: #004869;
+  padding: 36px 0px
 }
 .layout_text h1{
-
+  font-size: 36px;
+  font-weight: 900;
+  color: #FFF;
+  width: 60%;
+  line-height: 48px;
 }
 .layout_text p{
-
+  font-size: 16px;
+  color: #90daff;
+  width: 60%;
+  line-height: 32px;
 }
 .layout_img {
   width: 100vw;
-  height: 300px;
+  height: 40vh;
   display: flex;
-  justify-content: space-around;
+  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
   background-color: #3399cc;
 }
+.layout_img img{
+  width: 200px;
+}
+
 @media (min-width: 769px) {
   .home_wrapper {
     width: 100vw;
@@ -97,8 +110,12 @@
   }
   .layout_text {
     width: 50vw;
+    padding: 0;
   }
   .layout_img {
     width: 50vw;
+  }
+  .layout_img img{
+    width: 300px;
   }
 }
