--- a/src/Components/SplitBanner/SplitBanner.css
+++ b/src/Components/SplitBanner/SplitBanner.css
@@ -25,8 +25,8 @@
   line-height: 48px;
 }
 .layout_text p {
-  font-size: 16px;
-  color: #90daff;
+  font-size: 18px;
+  color: #b6e7ff;
   width: 80%;
   line-height: 32px;
 }
