--- a/src/Components/Product/Product.css
+++ b/src/Components/Product/Product.css
@@ -56,7 +56,25 @@
 }
 
 .learnMore_container{
-
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  background-image: radial-gradient(#004869, #00324e);
+  padding: 36px 0px;
+}
+.learnMore_container h1{
+  font-size: 36px;
+  font-weight: 900;
+  color: #fff;
+  width: 80%;
+  line-height: 48px;
+}
+.learnMore_container p {
+  font-size: 18px;
+  color: #b6e7ff;
+  width: 80%;
+  line-height: 32px;
 }
 
 @media (min-width: 769px) {
@@ -76,5 +94,14 @@
   .container p {
     padding-bottom: 36px;
   }
+
+  .learnMore_container h1{
+   
+  }
+  .learnMore_container p {
+  
+  }
+
+ 
 
 }
