--- a/src/Components/Banner/Banner.css
+++ b/src/Components/Banner/Banner.css
@@ -27,7 +27,7 @@
   background-position: right;
 }
 .dental_kid {
-  background-image: url("https://drive.google.com/uc?export=view&id=1-Czwm86FRV00m7PbPlJ-RL6JOjg4EEI-");
+  background-image: url("https://i.imgur.com/f4lflVy.png");
 }
 
 .bannerTitle {
