updated after meeting with bob

--- a/src/Components/Banner/Banner.css
+++ b/src/Components/Banner/Banner.css
@@ -23,7 +23,7 @@
   background-position: left;
 }
 .visionKid {
-  background-image: url("https://drive.google.com/uc?export=view&id=1EIJVzP6H8WYJg1qsg3bwPRaR1gWxyIOM");
+  background-image: url("https://i.imgur.com/7iULDVc.png");
   background-position: right;
 }
 .dental_kid {
